fixing categories on mobile for flexbox previous code was written incorrectly

--- a/ui/categories.reel/categories.css
+++ b/ui/categories.reel/categories.css
@@ -137,21 +137,16 @@
         right: 0;
         height: 64px;
         padding: 0;
-        display: -webkit-box;
-        display: -moz-box;
-        display: -ms-box;
-        display: box;
+        display: -webkit-flex;display: -ms-flexbox;display: flex;
         -webkit-box-orient: horizontal;
         -moz-box-orient: horizontal;
         -ms-box-orient: horizontal;
         box-orient: horizontal;
     }
     .Categories .Categories-button {
-        -webkit-box-flex: 1;
-        -moz-box-flex: 1;
-        -ms-box-flex: 1;
-        box-flex: 1;
-        width: 25%;
+        -webkit-flex: 1;
+            -ms-flex: 1;
+                flex: 1;
         line-height: 100px;
         font-size: 11px;
         text-align: center;
